# Commitlabs-Contracts

contracts/allocation_logic/: Cargo.toml
contracts/allocation_logic/src/: lib.rs  tests.rs
contracts/attestation_engine/src/: lib.rs  tests.rs
docs/: CONTRACT_FUNCTIONS.md  KNOWN_LIMITATIONS.md
tests/integration/: health_metrics_consistency_tests.rs
