[package]
name = "allocation_logic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]
benchmark = []
default = []

[dependencies]
soroban-sdk = "21.0.0"
shared_utils = { path = "../shared_utils" }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
commitment_core = { path = "../commitment_core" }
